--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "description": "A maket to book rooms",
   "main": "index.js",
   "scripts": {
+    "build": "webpack",
+    "start": "webpack --watch",
+    "serv": "static build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Anna",
@@ -13,15 +16,21 @@
     "url": "git@github.com:Siberiennne/hotel-booking.git"
   },
   "devDependencies": {
-    "node-sass": "^4.14.1",
-    "webpack": "^4.29.0",
     "@babel/core": "^7.2.2",
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
+    "css-loader": "^4.2.1",
+    "html-webpack-plugin": "^4.3.0",
+    "mini-css-extract-plugin": "^0.9.0",
+    "node-sass": "^4.14.1",
+    "node-static": "^0.7.11",
+    "pug": "^3.0.0",
+    "pug-loader": "^2.4.0",
+    "sass-loader": "^9.0.3",
+    "style-loader": "^1.2.1",
+    "webpack": "^4.29.0",
     "webpack-cli": "^3.2.1",
     "webpack-dev-server": "^3.1.14"
   },
-  "dependencies": {
-    "pug": "^3.0.0"
-  }
+  "dependencies": {}
 }
