--- a/package.json
+++ b/package.json
@@ -20,8 +20,11 @@
     "@babel/preset-env": "^7.3.1",
     "babel-loader": "^8.0.5",
     "clean-webpack-plugin": "^3.0.0",
+    "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^4.2.1",
+    "file-loader": "^6.0.0",
     "html-webpack-plugin": "^4.3.0",
+    "jquery": "^3.5.1",
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "node-static": "^0.7.11",
