--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "repository": {
     "type": "git",
-    "url": "git@github.com:Siberiennne/hotel-booking.git"
+    "url": "git@github.com:Siberiennne/toxin-hotel.git"
   },
   "devDependencies": {
     "@babel/core": "^7.2.2",
@@ -32,9 +32,17 @@
     "pug-loader": "^2.4.0",
     "sass-loader": "^9.0.3",
     "style-loader": "^1.2.1",
+    "typescript": "^4.0.3",
     "webpack": "^4.29.0",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.1.14"
   },
-  "dependencies": {}
+  "dependencies": {
+    "air-datepicker": "^2.2.3",
+    "chart.js": "^2.9.4",
+    "ion-rangeslider": "^2.3.1",
+    "item-quantity-dropdown": "^2.1.0",
+    "material-design-icons": "^3.0.1",
+    "owl.carousel": "^2.3.4"
+  }
 }
